--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@web3modal/ethers": "^4.2.1",
     "alchemy-sdk": "^3.3.1",
+    "dotenv": "^16.4.5",
     "ethers": "^6.12.0",
     "isotope-layout": "^3.0.6",
     "next": "^14.2.3",
